--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 ---
-title: About
+title: About Me
 ---
 <div class="editable">
 	<h1>About</h1>
 
-	<p>I'm Jane Doe and welcome to my food blog. Each week I try out a new recipe and post it here to share it with the world. If you enjoy any of the recipes I post feel free to leave a comment.</p>
+	<p>I'm Mallika, and welcome to my food blog! I am a vegetarian from Southern part of India, and I love to cook try out new recipes. I will be posting the recipes from time to time on my blog here at https://www.mallikasdishes.com web site. If you enjoy any of the recipes I post feel free to leave a comment.</p>
 
-	<p>I grew up in Denver, Colorado and learned to bake from my mother. After finishing highschool I started baking full time and selling baked goods at local markets. Now I work full-time at a bakery in San Francisco.</p>
-	<img src="https://source.unsplash.com/e05_q5pyMDs" alt="Jane Doe">
+	<p>I grew up in India, and learned to cook from my mother and friends. I am a full time mom, and always trying out new things. If you have any specific request on any of the vegetarian Indian food, please free to drop me a message.</p>
+	<img src="https://source.unsplash.com/e05_q5pyMDs" alt="Mallika">
 </div>
