--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About Me
 <div class="editable">
 	<h1>About</h1>
 
-	<p>I'm Mallika, and welcome to my food blog! I am a vegetarian from Southern part of India, and I love to cook & try out new recipes. I will be posting the recipes from time to time on my blog here at [https://www.mallikasdishes.com](https://www.mallikasdishes.com) website. If you enjoy any of the recipes I post, feel free to leave a comment.</p>
+	<p>I'm Mallika, and welcome to my food blog! I am a vegetarian from Southern part of India, and I love to cook & try out new recipes. I will be posting the recipes from time to time on my blog here at <a href="https://www.mallikasdishes.com">https://www.mallikasdishes.com</a> website. If you enjoy any of the recipes I post, feel free to leave a comment.</p>
 
 	<p>I grew up in India, and learned to cook from my mother and friends. I am a full-time mom, and always trying out new things to keep my hungry kids happy. If you have any specific questions or want to request for a new recipe, please feel free to drop me a message.</p>
 	<img src="https://source.unsplash.com/e05_q5pyMDs" alt="Mallika">
