--- a/curries.html
+++ b/curries.html
@@ -4,12 +4,9 @@ image_view: true
 ---
 <h1>Curries</h1>
 
-
-
 {% if page.image_view %}
 	{% for category in site.categories %}
-		<h2>{{ category[0] }}</h2>
-**{{ category[0] }}; {{ category[1] }} **
+		<h2>Curries</h2>
 		<div class="recipes">
 			{% for recipe in category[1] %}
 				<div class="recipe" style="background-image: url('{{ recipe.featured_image }}')">
