--- a/curries.html
+++ b/curries.html
@@ -5,14 +5,14 @@ image_view: true
 <h1>Curries</h1>
 
 {% if page.image_view %}
-	{% for category in site.categories if category == "curries" %}
+	{% for category in site.categories %}
+            {% if category == "curries" %}
 		<h2>Curries</h2>
 		<div class="recipes">
 			{% for recipe in category[1] %}			
-				<div class="recipe" style="background-image: url('{{ recipe.featured_image }}')">
-					<a href="{{ recipe.url }}"><span>{{ recipe.title }}</span></a>
-				</div>
+			  <a href="{{ recipe.url }}"><span>{{ recipe.title }}</span></a></br>
 			{% endfor %}
 		</div>
+            {% endif %}
 	{% endfor %}
 {% endif %}
