--- a/soups.html
+++ b/soups.html
@@ -2,7 +2,7 @@
 title: Soups
 image_view: true
 ---
-<h1>Curries</h1>
+<h1>{{ page.title }}</h1>
 
 {% if page.image_view %}
 	{% for category in site.categories %}
