--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@ title: About Me
 <div class="editable">
 	<h1>About</h1>
 
-	<p>I'm Mallika, and welcome to my website! I love to cook & try out new recipes. I will be sharing new recipes from time to time on my website here. If you enjoy any of the recipes I post, feel free to leave a comment.</p>
+	<p>I'm <strong>Mallika</strong>, and welcome to my website! I love to cook & try out new recipes. I will be sharing new recipes from time to time on my website here. If you enjoy any of the recipes I post, feel free to leave a comment.</p>
 
-	<p>I grew up in South India, and learned to cook from my mother, relatives and friends. I am a full-time mom, and always trying out new things to keep my hungry kids happy :o). Some of these recipes have been passed onto me from many generations, and if you are into authentic South Indian Vegetarian food, you've come to the right place. </p>
+	<p>I grew up in South India, and learned to cook from my mother, relatives and friends. I am a full-time mom, and always trying out new things to keep my hungry kids happy :o) Some of these recipes have been passed onto me from many generations, and if you are into authentic South Indian Vegetarian food, you've come to the right place. </p>
 		
 	<p>If you have any specific questions or want to request for a new recipe, please feel free to drop me a message. Happy Cooking!</p>
 	<img src="https://source.unsplash.com/e05_q5pyMDs" alt="Mallika">
