--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
 				<img src="{{ post.featured_image }}" alt="{{ post.title }}">
 			</div>
 
-			{{ post.excerpt }}
+			{{ post.recipe.excerpt }}
 
 			<p><a class="button" href="{{ post.url }}">Read more</a></p>
 		</article>
