--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 title: Home
 ---
 
-This is Home Page - add brief background here...
+<strong>Greetings</strong> and Welcome to Mallika's Dishes website!
 
-<h1>Latest Recipes</h1>
+Thank you for being here. Here you will find nothing but <strong>The Best and Authentic Vegetarian South Indian Dishes</strong>. This is my personal 
+collection of recipes that I use <u>every day</u> at home, that I have collected over the years. I am a strict vegetarian, and you will ONLY find vegetarian recipes in here. 
 
-Total Posts: {{ paginator.total_pages }}
+I know there are many websites and blogs out there that has similar recipes. My goal is to digitize what I have in a small notebook, and make it accessible to me (no matter where I am), my family and friends.
+Many of my family and friends ask me for recipes, and this website makes it easy for me to share and exchange new cooking ideas.
+
+As they say, Give a woman a dish, and you feed her for a Day. Share a recipe wiht a woman, and she will use it for Lifetime! :o)
+
+If you have any traditional South Indian recipes that you would like to share or want me to add to this web site, please let me know.
+Please feel free to explore my website and try out new recipes!
 
 <section class="posts">
 	{% for post in paginator.posts %}
