--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ Many of my family and friends ask me for recipes, and this website makes it easy
 <p>As they say, Give a woman a dish, and you feed her for a Day. Share a recipe with a woman, and she will use it for Lifetime! :o)</p>
 
 <p>If you have any traditional South Indian recipes that you would like to share or want me to add to this web site, please let me know.
-	Please feel free to explore my website and try out new recipes!</p>
+	I hope you get to try out new recipes!</p>
 
-<p>The following are some of the new recipes I added. Enjoy and don't forget to share your experience!</p>
+<p>The following are some of the new ones I added recently. Enjoy and don't forget to share your experience!</p>
 
 <section class="posts">
 	{% for post in paginator.posts %}
