--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 title: Home
 ---
 
-<p><strong>Greetings</strong> and Welcome to Mallika's Dishes website!</p>
+<p><strong>Greetings and Welcome to Mallika's Dishes website!</strong></p>
 
-<p>Thank you for being here. Here you will find nothing but <strong>The Best and Authentic Vegetarian South Indian Dishes</strong>. This is my personal 
+<p>Thank you for being here. You will find nothing but <strong>The Best and Authentic Vegetarian South Indian Dishes</strong> here. This is my personal 
 collection of recipes that I use <u>every day</u> at home, that I have collected over the years. I am a strict vegetarian, and you will ONLY find vegetarian recipes in here. </p>
 
 <p>I know there are many websites and blogs out there with similar recipes, my goal is to digitize what I have in a small notebook, and make it accessible to me (no matter where I am), my family and friends.
