--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 <p>Thank you for being here. You will find nothing but <strong>The Best and Authentic Vegetarian South Indian Dishes</strong> here. This is my personal 
 collection of recipes that I use <u>every day</u> at home, that I have collected over the years. I am a strict vegetarian, and you will ONLY find vegetarian recipes in here. </p>
 
-<p>I know there are many websites and blogs out there with similar recipes, my goal is to digitize what I have in a small notebook, and make it accessible to me (no matter where I am), my family and friends.
+<p>I know there are many websites and blogs out there with similar recipes, my goal is to digitize what I currently have in a small notebook (that is in a pretty bad shape), and make it accessible to me (no matter where I am), my family and friends.
 Many of my family and friends ask me for recipes, and this website makes it easy for me to share and exchange new cooking ideas.</p>
 
 <p>As they say, Give a woman a dish, and you feed her for a Day. Share a recipe with a woman, and she will use it for Lifetime! :o)</p>
