--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ collection of recipes that I use <u>every day</u> at home, that I have collected
 <p>I know there are many websites and blogs out there with similar recipes, my goal is to digitize what I currently have in a small notebook (that is in a pretty bad shape), and make it accessible to me (no matter where I am), my family and friends.
 Many of my family and friends ask me for recipes, and this website makes it easy for me to share and exchange new cooking ideas.</p>
 
-<p>As they say, Give a woman a dish, and you feed her for a Day. Share a recipe with a woman, and she will use it for Lifetime! :o)</p>
+<p>As I always say, <i>"Give a woman a dish, and you feed her for a day. Share a recipe with a woman, and she will use it for lifetime!"</i> :o)</p>
 
 <p>If you have any traditional South Indian recipes that you would like to share or want me to add to this web site, please let me know.
 	I hope you get to try out new recipes!</p>
