--- a/entrees.html
+++ b/entrees.html
@@ -2,7 +2,7 @@
 title: Entrees
 image_view: true
 ---
-<h1>{{ page.title }}</h1>
+<h1>Entrées</h1>
 
 {% if page.image_view %}
 	{% for category in site.categories %}
