--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@ title: About
 
 	<p>I grew up in Andhra Pradesh, South India, and learned to cook from my mother, relatives and friends. I am a full-time mom, and always trying out new things to keep my hungry kids happy :o) Some of these recipes have been passed onto me from many generations, and if you are into authentic South Indian Vegetarian food, you've come to the right place.</p>
 	
+	<p><b>P.S</b>. Throughout this website, you will see some words that might not make sense to you if you are not from Andhra Pradesh. For example - Kandi Podi, Nuvvula Podi, Karivepaku Podi...etc. Those are the names of the dishes in Telugu language, and I will try my best to provide you some sort of English translation, so you know what it means. </p>
+	
 	<p>If you have any specific questions or want to request for a new recipe, please feel free to drop me a message. Happy Cooking!</p>
 
 	<img src="https://source.unsplash.com/e05_q5pyMDs" alt="Mallika">
