--- a/404.html
+++ b/404.html
@@ -4,4 +4,6 @@ permalink: /404.html
 sitemap: false
 ---
 
-<h1>This page could not be found</h1>
+<h1>Oops... The dish you are looking for is not found!</h1>
+
+<img src="/images/empty_plate.jpg">
