--- a/about.html
+++ b/about.html
@@ -7,10 +7,12 @@ title: About
 	<p>I'm <strong>Mallika</strong>, and welcome to my website! I love to cook & try out new recipes. I will be sharing new recipes from time to time on my website here. If you enjoy any of the recipes I have here, feel free to leave a comment.</p>
 
 	<p>I grew up in Andhra Pradesh, South India, and learned to cook from my mother, relatives and friends. I am a full-time mom, and always trying out new things to keep my hungry kids happy :o) Some of these recipes have been passed onto me from many generations, and if you are into authentic South Indian Vegetarian food, you've come to the right place.</p>
+
+	<p>I know there are many websites and blogs out there with similar recipes, my goal is to digitize what I currently have in a small notebook (that is in a pretty bad shape), and make it accessible to me (no matter where I am), my family and friends. Many of my family and friends ask me for recipes, and this website makes it easy for me to share and exchange new cooking ideas.</p>
 	
-	<p><b>P.S</b>. Throughout this website, you will see some words that might not make sense to you if you are not from Andhra Pradesh. For example - Kandi Podi, Nuvvula Podi, Karivepaku Podi...etc. Those are the names of the dishes in Telugu language, and I will try my best to provide you some sort of English translation, so you know what it means. </p>
+	<p><b>P.S</b>. Throughout this website, you will see some words that might not make sense to you if you are not a native Telugu speaker. For example - Kandi Podi, Nuvvula Podi, Karivepaku Podi...etc. Those are the names of the dishes in Telugu language, and I will try my best to provide you some sort of English translation, so you know what it means. Trust me, no matter how the dish is called, I guarantee you they taste wonderful 😊 </p>
 	
-	<p>If you have any specific questions or want to request for a new recipe, please feel free to drop me a message. Happy Cooking!</p>
+	<p>If you have any traditional South Indian recipes that you would like to share or want me to add to this web site, please feel free to drop me a message. I hope you get to try out new recipes! Happy Cooking!</p>
 
 	<img src="https://source.unsplash.com/e05_q5pyMDs" alt="Mallika">
 </div>
