--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@ title: Home
 <p><strong>Greetings and Welcome to Mallika's Dishes website!</strong></p>
 
 <p>Thank you for being here. You will find nothing but <strong>The Best and Authentic Vegetarian South Indian Dishes</strong> here. This is my personal 
-collection of recipes that I use <u>every day</u> at home, that I have collected over the years. I am a strict vegetarian, and you will ONLY find vegetarian recipes in here. </p>
+collection of recipes that I use <u>every day</u> at home, that I have collected over the years. I am a strict vegetarian, and you will ONLY find vegetarian recipes in here.</p>
 
-<p>I know there are many websites and blogs out there with similar recipes, my goal is to digitize what I currently have in a small notebook (that is in a pretty bad shape), and make it accessible to me (no matter where I am), my family and friends.
-Many of my family and friends ask me for recipes, and this website makes it easy for me to share and exchange new cooking ideas.</p>
-
-<p>If you have any traditional South Indian recipes that you would like to share or want me to add to this web site, please let me know.
-	I hope you get to try out new recipes!</p>
-
-<p>The following are some of the new ones I added recently. Enjoy and don't forget to share your experience!</p>
+<p>The following are some of the new recipes I added recently. Enjoy and don't forget to share your experience!</p>
 
 <section class="posts">
 	{% for post in paginator.posts %}
