--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ title: About
 
 	<p>I know there are many websites and blogs out there with similar recipes, my goal is to digitize what I currently have in a small notebook (that is in a pretty bad shape), and make it accessible to me (no matter where I am), my family and friends. Many of my family and friends ask me for recipes, and this website makes it easy for me to share and exchange new cooking ideas.</p>
 	
-	<p><b>P.S</b>. Throughout this website, you will see some words that might not make sense to you if you are not a native Telugu speaker. For example - Kandi Podi, Nuvvula Podi, Karivepaku Podi...etc. Those are the names of the dishes in Telugu language, and I will try my best to provide you some sort of English translation, so you know what it means. Trust me, no matter how the dish is called, I guarantee you they taste wonderful 😊 </p>
+	<p><b>P.S</b>. Throughout this website, you will see some words that might not make sense to you if you are not a native Telugu speaker. For ex: Kandi Podi, Nuvvula Podi, Karivepaku Podi...etc. Those are the names of the dishes in Telugu language, and I will try my best to provide you some sort of English translation, so you know what it means. Trust me, no matter how the dish is called, I guarantee you they taste wonderful 😊 </p>
 	
 	<p>If you have any traditional South Indian recipes that you would like to share or want me to add to this web site, please feel free to drop me a message. I hope you get to try out new recipes! Happy Cooking!</p>
 
