--- a/pickles.html
+++ b/pickles.html
@@ -11,7 +11,9 @@ image_view: true
 			<ul>
 			{% assign sortedPosts = category[1] | sort: 'title' %}
 			{% for recipe in sortedPosts %}		
-			<li><a href="{{ recipe.url }}"><span>{{ recipe.title }}</span></a></li>
+				<li>
+					<a href="{{ recipe.url }}"><span>{{ recipe.recipe.title }}</span></a>
+				</li>
 			{% endfor %}
 			</ul>
 		</div>
