--- a/404.html
+++ b/404.html
@@ -4,6 +4,6 @@ permalink: /404.html
 sitemap: false
 ---
 
-<h1>Oops... The dish you are looking for is not found!</h1>
+<h2>This is not good!</h2>
 
 <img src="/images/empty_plate.jpg">
