--- a/disclaimer.html
+++ b/disclaimer.html
@@ -19,7 +19,7 @@ title: Disclaimer
 
 <p>The statements contained in this website or blog have not been evaluated by the Food and Drug Administration. Any products mentioned in this blog/website are not intended to diagnose, treat, cure, or prevent any disease. Please consult a doctor before altering your diet in any way, including going gluten free, or taking any supplements.</p>
 
-<p>This website shall not be liable for adverse reactions or any other outcome resulting from the use of recipes or recommendations on the Website or actions you take as a result. Any action you take is strictly at your own risk.</p>
+<p><b>I am not liable for adverse reactions or any other outcome resulting from the use of recipes or recommendations on the Website or actions you take as a result. Any action you take is strictly at your own risk.</b></p>
 
 <p>I make no warranties for the outcome of your food experiments. Good luck!</p>
 
