--- a/disclaimer.html
+++ b/disclaimer.html
@@ -2,6 +2,8 @@
 title: Disclaimer
 ---
 
+<h1>Disclaimer</h1>
+
 <div class="editable">
 
 <p>Many of the recipes you find here may contain gluten, dairy products, nuts, and other spices. If you are allergic to any of the ingredients, BE EXTRA CAREFUL NOT TO ADD THEM TO YOUR RECIPE.</p>
