--- a/disclaimer.html
+++ b/disclaimer.html
@@ -6,7 +6,7 @@ title: Disclaimer
 
 <div class="editable">
 
-<p>Many of the recipes you find here may contain gluten, dairy products, nuts, and other spices. If you are allergic to any of the ingredients, BE EXTRA CAREFUL NOT TO ADD THEM TO YOUR RECIPE.</p>
+<p><span style="color:red;">Many of the recipes you find here may contain gluten, dairy products, nuts, and other spices. If you are allergic to any of the ingredients, <b>DO NOT PROCEED!</b></spam></p>
 
 <p>I am not responsible for the outcome of any recipe you try from this blog/website. You may not always have the same results I do due to variations in ingredients, humidity, location, cooking temperatures, typos, errors, omissions, or individual cooking abilities.</p>
 
