--- a/disclaimer.html
+++ b/disclaimer.html
@@ -6,23 +6,23 @@ title: Disclaimer
 
 <div class="editable">
 
-<p><span style="color:red;">Many of the recipes you find here may contain gluten, dairy products, nuts, and other spices. If you are allergic to any of the ingredients, <b>DO NOT PROCEED!</b></spam></p>
+<p><span style="color:red;">Many of the recipes you find here may contain gluten, dairy products, <b>nuts</b>, and other spices that may cause severe allergic reaction. If you are allergic to any of the ingredients, <b>DO NOT PROCEED!</b></spam></p>
 
-<p>I am not responsible for the outcome of any recipe you try from this blog/website. You may not always have the same results I do due to variations in ingredients, humidity, location, cooking temperatures, typos, errors, omissions, or individual cooking abilities.</p>
+<p>I am not responsible for the outcome of any recipe you try from this website. You may not always have the same results I do due to variations in ingredients, humidity, location, cooking temperatures, typos, errors, omissions, or individual cooking abilities.</p>
 
 <p>Any information you find here is believed to be accurate at the time of posting, however, that could change with product reformulations and new medical information.</p>
 
-<b>I am not liable, not responsible and do not assume obligation for:</b>
+<b>I am not liable, not responsible and do not assume obligation for the following:</b>
 <ul>
   <li>Adverse reactions to food consumed such as food poisoning and any kind of food-borne disease</li>
   <li>Misinterpreted recipe</li>
   <li>Domestic accidents, including but not limited to fires in your kitchen, a cut finger or flour-covered kitchen countertop.</li>
 </ul>
 
-<p>The statements contained in this website or blog have not been evaluated by the Food and Drug Administration. Any products mentioned in this blog/website are not intended to diagnose, treat, cure, or prevent any disease. Please consult a doctor before altering your diet in any way, including going gluten free, or taking any supplements.</p>
+<p>The statements contained in this website have not been evaluated by the Food and Drug Administration. Enev though you will find some health tips, any products/recipes mentioned in this website are not intended to diagnose, treat, cure, or prevent any disease. Please consult a doctor before altering your diet in any way.</p>
 
-<p><b>I am not liable for adverse reactions or any other outcome resulting from the use of recipes or recommendations on the Website or actions you take as a result. Any action you take is strictly at your own risk.</b></p>
+<p><b>I am not liable for adverse reactions or any other outcome resulting from the use of recipes or recommendations on the website or actions you take as a result. Any action you take is strictly at your own risk. I make no warranties for the outcome of your food experiments.</b></p>
 
-<p>I make no warranties for the outcome of your food experiments. Good luck!</p>
+<p>Good luck!</p>
 
 </div>
