--- a/disclaimer.html
+++ b/disclaimer.html
@@ -8,7 +8,7 @@ title: Disclaimer
 
 <p><span style="color:red;">Many of the recipes you find here may contain gluten, dairy products, <b>nuts</b>, and other spices that may cause severe allergic reaction. If you are allergic to any of the ingredients, <b>DO NOT PROCEED!</b></spam></p>
 
-<p>I am not responsible for the outcome of any recipe you try from this website. You may not always have the same results I do due to variations in ingredients, humidity, location, cooking temperatures, typos, errors, omissions, or individual cooking abilities.</p>
+<p>I am not responsible for the outcome of any recipe you try from this website. You may not always have the same results as I do due to variations in ingredients, humidity, location, cooking temperatures, typos, errors, omissions, or individual cooking abilities.</p>
 
 <p>Any information you find here is believed to be accurate at the time of posting, however, that could change with product reformulations and new medical information.</p>
 
