--- a/disclaimer.html
+++ b/disclaimer.html
@@ -19,7 +19,7 @@ title: Disclaimer
   <li>Domestic accidents, including but not limited to fires in your kitchen, a cut finger or flour-covered kitchen countertop.</li>
 </ul>
 
-<p>The statements contained in this website have not been evaluated by the Food and Drug Administration. Enev though you will find some health tips, any products/recipes mentioned in this website are not intended to diagnose, treat, cure, or prevent any disease. Please consult a doctor before altering your diet in any way.</p>
+<p>The statements contained in this website have not been evaluated by the Food and Drug Administration. Even though, occasionally you will find some health tips, any products/recipes mentioned in this website are not intended to diagnose, treat, cure, or prevent any disease. Please consult a doctor before altering your diet in any way.</p>
 
 <p><b>I am not liable for adverse reactions or any other outcome resulting from the use of recipes or recommendations on the website or actions you take as a result. Any action you take is strictly at your own risk. I make no warranties for the outcome of your food experiments.</b></p>
 
