--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
 title: Home
 ---
+<h1>Greetings!</h1>
 
-<p><strong>Greetings and Welcome to Mallika's Dishes website!</strong></p>
-
-<p>Thank you for being here. You will find nothing but <strong>The Best and Authentic Vegetarian South Indian Dishes</strong> here. This is my personal 
+<p><strong>Welcome to Mallika's Dishes website</strong>, and thank you for being here! You will find nothing but <strong>The Best and Authentic Vegetarian South Indian Dishes</strong> here. This is my personal 
 collection of recipes that I use <u>every day</u> at home, that I have collected over the years. I am a strict vegetarian, and you will ONLY find vegetarian recipes in here.</p>
 
 <p>The following are some of the new recipes I added recently. Enjoy and don't forget to share your experience!</p>
