--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 <h1>Greetings!</h1>
 
 <p><strong>Welcome to Mallika's Dishes Website!</strong> You will find nothing but <strong>The Best and Authentic Vegetarian South Indian Dishes</strong> here. This is my personal 
-collection of recipes that I use <u>every day</u> at home, that I have collected over the years. I am a strict vegetarian, and you will ONLY find vegetarian recipes in here.</p>
+collection of recipes that I use <u>every day</u> at home that I have collected over the years. I am a strict vegetarian, and you will ONLY find vegetarian recipes in here.</p>
 
 <p>The following are some of the new recipes I added recently. Enjoy and don't forget to share your experience!</p>
 
