--- a/ingredients.html
+++ b/ingredients.html
@@ -7,7 +7,7 @@ title: Ingredients in English, Hindi and Telugu
 <tr>
 <th>English</th><th>Hindi</th><th>Telugu</th>
 </tr>
-{% for i in site.data.ingredients %}
+{% for i in site.data.ingredients.items %}
 <tr>
   <td>{{ i.english }}</td>
   <td>{{ i.hindi }}</td>
