--- a/ingredients.html
+++ b/ingredients.html
@@ -3,6 +3,12 @@ title: Ingredients in English, Hindi and Telugu
 ---
 <h1>{{ page.title }}</h1>
 
+{{ site.data.ingredients.size}}
+
+{{ site.data.ingredients.items }}
+
+{{ site.data.ingredients.items.size }}
+
 <table>
 <tr>
 <th>English</th><th>Hindi</th><th>Telugu</th>
