--- a/ingredients.html
+++ b/ingredients.html
@@ -9,6 +9,10 @@ title: Ingredients in English, Hindi and Telugu
 
 {{ site.data.ingredients.items.size }}
 
+{% for i in site.data.ingredients.items %}
+ {{ i }} <br/><br/>
+{% endfor %}
+
 <table>
 <tr>
 <th>English</th><th>Hindi</th><th>Telugu</th>
