--- a/ingredients.html
+++ b/ingredients.html
@@ -9,7 +9,7 @@ title: Ingredients in English, Hindi and Telugu
 
 {{ site.data.ingredients.items.size }}
 
-{% for i in site.data.ingredients.items %}
+{% for i in site.data.ingredients %}
  {{ i }} <br/><br/>
 {% endfor %}
 
@@ -17,7 +17,7 @@ title: Ingredients in English, Hindi and Telugu
 <tr>
 <th>English</th><th>Hindi</th><th>Telugu</th>
 </tr>
-{% for i in site.data.ingredients.items %}
+{% for i in site.data.ingredients %}
 <tr>
   <td>{{ i.english }}</td>
   <td>{{ i.hindi }}</td>
