--- a/ingredients.html
+++ b/ingredients.html
@@ -1,17 +1,12 @@
 ---
 title: Ingredients in English, Hindi and Telugu
 ---
+<style>
+ table {
+  width: 100%;
+ }
+</style>
 <h1>{{ page.title }}</h1>
-
-{{ site.data.ingredients.size}}
-
-{{ site.data.ingredients.items }}
-
-{{ site.data.ingredients.items.size }}
-
-{% for i in site.data.ingredients %}
- {{ i }} <br/><br/>
-{% endfor %}
 
 <table>
 <tr>
