--- a/ingredients.html
+++ b/ingredients.html
@@ -1,5 +1,5 @@
 ---
-title: Ingredients in English, Hindi and Telugu
+title: Common Ingredients
 ---
 <style>
  table {
@@ -7,6 +7,10 @@ title: Ingredients in English, Hindi and Telugu
  }
 </style>
 <h1>{{ page.title }}</h1>
+
+<p>
+ The following are the common ingredients in three different languages. I thought it would be easier if I capture all the ingredients in one place, so that it is easy to look up :) The items are in no particular order, but having them all in one place is first step. We can always go back and organize stuff later!
+</p>
 
 <table>
 <tr>
